# google-calendar-wps-puw-integration

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.cursor/skills/architect-persona/: SKILL.md
.cursor/skills/architect-persona/references/: adr-template.md  mermaid-c4-patterns.md  node-folder-structure.md  prd-template.md
.cursor/skills/node-js-best-practices/: SKILL.md
.cursor/skills/pm-prd/: SKILL.md
ahe_sync/: __main__.py  config.py  models.py  observability.py  scheduler.py  state.py  sync_engine.py
ahe_sync/connectors/: base.py  puw.py  wps.py
ahe_sync/google/: auth.py  calendar.py
docs/PRD/: PRD.md
docs/adr/: 0001-python-packaging.md  0002-scheduler-apscheduler.md  0003-state-and-token-storage.md  0004-flat-module-structure.md  README.md
docs/architecture/: README.md
docs/requirements/: Krystian_Rutkowski.md  dariusz_lorenz.md  mateusz_pietrusinski.md  wiktor-purgal.md
github/: CODEOWNERS
openspec/changes/archive/2026-03-29-build-ahe-sync-daemon/: design.md  proposal.md  (+1 more)
openspec/changes/initial-sync-on-startup/: design.md  proposal.md  tasks.md
openspec/specs/daemon-scheduler/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/puw-sync/: spec.md
openspec/specs/sync-engine/: spec.md
openspec/specs/wps-sync/: spec.md
scripts/: setup.py
tests/integration/: test_puw_sync_cycle.py  test_remove_command.py  test_wps_sync_cycle.py
tests/unit/: test_auth.py  test_calendar.py  test_config.py  test_puw_mapper.py  test_startup_sync.py  test_state.py  test_sync_engine.py  test_wps_mapper.py
(+7 files in other folders)
